# practice-metaflow

./: .gitignore  README.md  pyproject.toml
.metaflow/: config.template.json
flows/: demo_flow.py  minimum_flow.py
notebooks/: explore_flow.ipynb
